[package]
name = "may_http"
version = "0.1.0"
edition = "2018"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-may/may_http.git"
homepage = "https://github.com/rust-may/may_http.git"
documentation = "https://docs.rs/may_http"
description = "Coroutine based http Library"
readme = "README.md"
keywords = ["coroutine", "http", "may"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
    "docs/**/*",
]

[badges]
travis-ci = { repository = "rust-may/may_http" }

[dependencies]
bytes = "0.4"
http = "0.1"
httparse = "1.2"
log = "0.4"
may = "0.3"
time = "0.1"

[dev-dependencies]
env_logger = "0.6"

[profile.release]
lto = true
